testsuite/tests/typecheck/should_fail/mc23.stderr

mc23.hs:9:29: error:
    Couldn't match type ‘[a0]’ with ‘[a] -> m0 a’
    Expected type: (a -> b0) -> [a] -> m0 a
      Actual type: [a0] -> [a0]
    Relevant bindings include z :: m0 b0 (bound at mc23.hs:9:1)
    Possible cause: ‘take’ is applied to too many arguments
    In the expression: take 5
    In a stmt of a monad comprehension: then take 5 by x
    In the expression: [x | x <- [1 .. 10], then take 5 by x]
